--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
