--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "json-server": "^0.17.3",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "query-string": "^8.1.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.3",
     "sort-by": "^1.2.0"
